--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,8 @@ set -g window-status-format '#W'
 set -g status-right "%H:%M"
 
 # default statusbar colors
-set-option -g status-bg colour232 #base02
+# set-option -g status-bg colour232 #base02
+set-option -g status-bg colour8 #base02
 set-option -g status-fg colour238 #yellow
 set-option -g status-attr default
 
