--- a/tmux.conf
+++ b/tmux.conf
@@ -38,3 +38,6 @@ set-option -g pane-active-border-fg colour240 #base01
 # message text
 set-option -g message-bg colour232
 set-option -g message-fg colour1
+
+# scrolling and history
+set -g history-limit 10000
